[Java] Use fork compilation to suppress warning about Unsafe